--- a/src/components/toolbar/styles.css
+++ b/src/components/toolbar/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #24252a;
+    background-color: #ffffff;
 }
 
 .toolbar {
@@ -18,8 +18,12 @@ li, a, button {
     font-family: "Nunito", sans-serif;
     font-weight: 700;
     font-size: 16px;
-    color: #edf0f1;
+    color: black;
     text-decoration: none;
+}
+
+button {
+    color: white;
 }
 
 .logo {
