--- a/src/components/toolbar/styles.css
+++ b/src/components/toolbar/styles.css
@@ -6,10 +6,13 @@
 }
 
 .toolbar {
+    position: fixed;
+    min-width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
+    padding: 10px 10%;
+    box-shadow: 0 2px 10px grey;
 }
 
 li, a, button {
